--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav-bar">
             <div class="logo-box">
 
-                <img src="images/crossedoars.jpeg" alt="logo">
+                <img src="images/ese-logo.png" alt="logo">
             </div>
             <nav>
                 <a href="#">Home</a>
