--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="featured-products">
                 <div class="featured-products-item">
-                    <img src="images/004.jpg" alt="shoe 004"> 
+                    <img src="images/004.webp" alt="shoe 004"> 
                     <h2>Men Shoe</h2>
                     <div class="product-rating">
                         <i class="fa fa-star"></i>
@@ -85,17 +85,17 @@
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/005.jpg" alt="shoe 005"> 
+                    <img src="images/005.webp" alt="shoe 005"> 
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/006.jpg" alt="shoe 006">
+                    <img src="images/006.webp" alt="shoe 006">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/007.jpg" alt="shoe 007">
+                    <img src="images/007.webp" alt="shoe 007">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
@@ -106,43 +106,43 @@
                 <div class="featured-products">
                 
                 <div class="featured-products-item">
-                    <img src="images/008.jpg" alt="shoe 008">
+                    <img src="images/008.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/009.jpg" alt="shoe 008">
+                    <img src="images/009.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/010.jpg" alt="shoe 008">
+                    <img src="images/010.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/011.jpg" alt="shoe 008">
+                    <img src="images/011.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 
                 <div class="featured-products-item">
-                    <img src="images/012.jpg" alt="shoe 008">
+                    <img src="images/012.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/013.jpg" alt="shoe 008">
+                    <img src="images/013.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/014.jpg" alt="shoe 008">
+                    <img src="images/014.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
                 <div class="featured-products-item">
-                    <img src="images/015.jpg" alt="shoe 008">
+                    <img src="images/015.webp" alt="shoe 008">
                     <h2>Men Shoe</h2>
                     <p class="price">#4,000</p>
                 </div>
