--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="featured-products">
                 <div class="featured-products-item">
-                    <img src="images/004.webp" alt="shoe 004"> 
+                    <img src="images/004.jpg" alt="shoe 004"> 
                     <h2>Men Shoe</h2>
                     <div class="product-rating">
                         <i class="fa fa-star"></i>
