--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
 </head>
-<body>
+<body class="poppins-medium">
     <div class="header">
     
         <div class="nav-bar">
@@ -73,7 +73,7 @@
 
             <div class="featured-products">
                 <div class="featured-products-item">
-                    <img src="images/004.jpg" alt="shoe 004"> 
+                    <img src="images/004.webp" alt="shoe 004"> 
                     <h2>Men Shoe</h2>
                     <div class="product-rating">
                         <i class="fa fa-star"></i>
