--- a/index.html
+++ b/index.html
@@ -28,20 +28,23 @@
             </nav>
             <img id="cart-id" src="images/cart1.png" alt="shoping cart1">
         </div>
-
-        <div class="welcome-class">
-            <div class="welcome-items">
-                <h1> Best Online Shop for Wears<br> and jewelries </h1>
-                <p> We are address the way we dress, so dress<br> well to fill the real you.</p>
-                <a href="" class="button-exp" > Exploure Now &#8594;</a>
-            </div>
-
-            <div class="welcome-items">
-                <img src="images/woman001.webp" alt="Monday Eseinone's profile pic">
-            </div>
-        </div>
-
 </div>
+
+<!-- welcome class or landing page  starts here -->
+<div class="welcome-class">
+
+   <!--  <img id="welcome-background-img" src="images/background-ese-store.jpg" alt="ese-bacground-home-page">-->
+    <div id="welcome-background" class="welcome-items">
+        <h1> Best Online Shop for Wears<br> and jewelries </h1>
+        <p> We are address the way we dress, so dress<br> well to fill the real you.</p>
+        <a href="" class="button-exp" > Exploure Now &#8594;</a>
+    </div>
+    <div class="welcome-items">
+        <img src="images/woman001.webp" alt="Monday Eseinone's profile pic">
+    </div>
+</div>
+<!-- welcome class or landing page  starts here -->
+
     <div class="grid">   
         <main>
 
