--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
 
     <footer class="footer-grid">
         <div class="footer-grid-item"> 
+            <h2> Design by Monday Eseinone</h2>
             <p>©2024🗽 MBC Online Store🗽 Monday Erirore Eseinone 🗽  </p>
-            <a href="https://app.moqups.com/lkOL9ttBZ2tlFygUw5EABtGa8IDvVvCW/view/page/ad64222d5">Draft link  </a>
+           <!-- <a href="https://app.moqups.com/lkOL9ttBZ2tlFygUw5EABtGa8IDvVvCW/view/page/ad64222d5">Draft link  </a> -->
             
         </div>
         <div class="footer-grid-item"> 
