--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
    <!--  <img id="welcome-background-img" src="images/background-ese-store.jpg" alt="ese-bacground-home-page">-->
     <div id="welcome-background" class="welcome-items">
         <h1> Best Online Shop for Wears<br> and jewelries </h1>
-        <p> We are address the way we dress, so dress<br> well to fill the real you.</p>
-        <a href="" class="button-exp" > Exploure Now &#8594;</a>
+        <p> We are address the way we dress,that is why we are in the
+             business of providing super quallity Wears that helps you <br>
+             Unleash Your Fashion Potential</p>
+        <a href="#category1" class="button-exp" > Exploure Now &#8594;</a>
     </div>
     <div class="welcome-items">
         <img src="images/woman001.webp" alt="Monday Eseinone's profile pic">
@@ -49,7 +51,7 @@
         <main>
 
             <h2> Product Catigories  </h2>
-            <div class="listProduct">
+            <div id="category1" class="listProduct">
                 <div class="listProduct-item">
                     <img src="images/001.webp" alt="shoe 001"> 
                     <h2>Men Shoe</h2>
